--- a/resources/public/css/tango.css
+++ b/resources/public/css/tango.css
@@ -1,3 +1,7 @@
+.tango-padding {
+  padding-top: 100px;
+}
+
 .btn-file {
     position: relative;
     overflow: hidden;
@@ -64,3 +68,8 @@ input[type='checkbox']
 {
   visibility: hidden;
 }
+
+.tango-fixed {
+    position: fixed
+}
+
